# dlopen-demo-c

./: Makefile.am  configure.ac
src/: dynamic_library.c  dynamic_library.h  jvm.c  jvm.h
tests/: test-dlopen.c  test-jvm.c
